[project]
name = "test-gis-backend-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "geojson>=3.2.0",
    "pydantic-settings>=2.10.1",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]
